# cvml-exercise

./: README.md
data/: Download.md
ex01/: Dockerfile  README.md  buildIndex.py  embeddings.py  queryDataset.py  requirements.txt
ex01/weights/: Download.md
ex02/: CycleDetection.py  Dockerfile  README.md  getPoseLandmarks.py  requirements.txt
ex02/output/: cycles.json  trajectories.csv
ex03/: README.md  ScreenGrabAnalyzer.py  ScreenGrabAnalyzerMP.py  output.json  processdata.py
ex03/output/: results.json
ex03/weights/: Download.md
ex04/: Dockerfile  README.md  autopunc.py  convertQA.py  prepro_ytxscrips.py  requirements.txt
ex04/input/: Argo.htm
ex04/output/: 3-Kings.csv  3-Kings.json  Argo.csv  Argo.json
ex05/: README.md  index.html  main.js
ex06/: README.md  adThresh.cpp  adThresh.py
ex07/: README.md  TrainingCNN.md  countPennies.cpp  countPennies.py  pennyDetectionTrainer.py
ex08/: README.md  deDuplicator.py  run.sh
ex09/: README.md  ytCommentAnalyzer.py
ex10/: ImageCaptioner.py  README.md  VocabularyCreator.py
ex11/: Dockerfile  README.md  Requirements.txt  datasetBuilder.py  fineTuneLM.py
ex12/: Dockerfile  GaussianSplat.py  NERF.py  README.md  advconv.md  cmap.py  comp.md  ply2html.py  reconstruct.cpp  reconstruct.py  refineply.py  requirements.txt
ex13/: CMakelists.txt  DeadPixelDetector.py  DeadPixelDetector_plus.cpp  README.md  Spade.cpp  Spade.py  Spadeplus.cpp  videoCorruptor.cpp  videoCorruptor.py
ex14/: README.md  audioSearch.cpp  audiofile.h
ex15/: README.md
ex16/: BuildDataset.py  CamMotionClassification.cpp  CamMotionClassification.py  DatasetCreator.py  Dockerfile  Inference.cpp  Inference.py  README.md  Tester.py  Train.cpp  Train.py  Trainer.py  requirements.txt
ex17/: Dockerfile  Inference.py  README.md  SubCentShotClassification.py  Train.py  requirements.txt
ex18/: CMakeLists.txt  README.md  cuda-ptx-example.txt  cuda_kernels.cu  cuda_kernels.cuh  vector_add.cu  vector_add.ptx  video-integral-cuda.txt  video_integral.cu  video_processor.cpp
ex19/: README.md  localizeTemplate.py
ex20/: Dockerfile  Readme.md  Xscribe.cpp  Xscribe.py
ex20/input/: Data.md  preprocess.sh
ex21/: README.md  alignImages.cpp  alignImages.py  pcc.py  surf.py
ex22/: README.md  download.sh  estimateDims.cpp  estimateDims.py
ex23/: README.md  faceexp.md
ex24/: README.md  imageStitcher.cpp  imageStitcher.py  imageStitcherPlus.py
ex25/: README.md  socMedScraper.py
ex26/: CMakeLists.txt  README.md  download.sh  logoTracker.cpp  logoTracker.py  main.cpp  sort.cpp  sort.h
ex27/: CMakeLists.txt  README.md
ex27/include/: connected_components.h  convolution.h  feature_matching.h  harris.h  hog.h  homography.h  image_utils.h  kmeans.h  morphology.h  optical_flow.h  ransac.h  sift.h  stb_image.h
ex27/src/: connected_components.cpp  convolution.cpp  feature_matching.cpp  harris.cpp  hog.cpp  homography.cpp  kmeans.cpp  morphology.cpp  optical_flow.cpp  ransac.cpp  sift.cpp
ex28/: README.md  cpe.cpp  visualize.py  viz.py
ex28/output/: v_c_basic.json  v_c_enhanced.json  v_h_enhanced.json
ex29/: README.md  config.example.yaml  config.yaml  create_test_data.py  download_data.py  main.py  requirements.txt  visualize.py
ex29/input/: labels.npy  sentinel1.tif  sentinel2.tif  temporal_data.npy
ex29/output/: classification_report.txt
ex30/: README.md  datagen.py  register_pointsets.py
src/ex01/: README.md  buildIndex.py  embeddings.py  generateEmbeddings.py  getSimilarity.py  queryDataset.py
src/ex03/: run.sh
src/ex04/: README.md
src/ex05/: index.html  styles.css
src/ex06/: README.md  adThresh.py
src/ex07/: countPennies.py
src/weights/: Download.md
(+1 files in other folders)
